// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabStopsFailedInstanceSection does not render when no results are failing 1`] = `<DocumentFragment />`;

exports[`TabStopsFailedInstanceSection does renders when no results are failing and set to alwaysRenderSection 1`] = `
<DocumentFragment>
  <div
    class="tabStopsFailureInstanceSection"
    data-automation-id="tab-stops-failure-instance-section"
  >
    <h2
      class="headingElementForLevel"
    >
      <span
        class="resultSectionTitle"
      >
        <span
          class="screen-reader-only"
        >
          Failed instances 0
        </span>
        <span
          aria-hidden="true"
          class="title"
        >
          Failed instances
        </span>
        <span
          aria-hidden="true"
          class="outcomeChipContainer"
        >
          <span
            class="outcome-chip outcome-chip-fail"
            title="0 Failed"
          >
            <span
              class="icon"
            >
              <span
                class="check-container"
              >
                <svg
                  aria-hidden="true"
                  fill="none"
                  height="16"
                  role="img"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="8"
                    cy="8"
                    fill="#E81123"
                    r="8"
                  />
                  <path
                    d="M10.9837 6.27639C11.3352 5.92491 11.3352 5.35507 10.9837 5.00359C10.6322 4.65212 10.0624 4.65212 9.7109 5.00359L7.99722 6.71728L6.28375 5.00381C5.93227 4.65234 5.36242 4.65234 5.01095 5.00381C4.65948 5.35528 4.65948 5.92513 5.01095 6.2766L6.72443 7.99007L4.9837 9.7308C4.63222 10.0823 4.63222 10.6521 4.9837 11.0036C5.33517 11.3551 5.90502 11.3551 6.25649 11.0036L7.99722 9.26287L9.73816 11.0038C10.0896 11.3553 10.6595 11.3553 11.011 11.0038C11.3624 10.6523 11.3624 10.0825 11.011 9.73101L9.27001 7.99007L10.9837 6.27639Z"
                    fill="var(--neutral-0)"
                  />
                </svg>
              </span>
            </span>
            <span
              aria-hidden="true"
              class="count"
              data-automation-id="count"
            >
               0
            </span>
            <span
              class="screen-reader-only"
            >
              0 Failed
            </span>
          </span>
        </span>
      </span>
    </h2>
    <mock-tabstopsrequirementswithinstances
      deps="[object Object]"
      headinglevel="3"
      results=""
    />
  </div>
</DocumentFragment>
`;

exports[`TabStopsFailedInstanceSection renders with failing results 1`] = `
<DocumentFragment>
  <div
    class="tabStopsFailureInstanceSection"
    data-automation-id="tab-stops-failure-instance-section"
  >
    <h2
      class="headingElementForLevel"
    >
      <span
        class="resultSectionTitle"
      >
        <span
          class="screen-reader-only"
        >
          Failed instances 10
        </span>
        <span
          aria-hidden="true"
          class="title"
        >
          Failed instances
        </span>
        <span
          aria-hidden="true"
          class="outcomeChipContainer"
        >
          <span
            class="outcome-chip outcome-chip-fail"
            title="10 Failed"
          >
            <span
              class="icon"
            >
              <span
                class="check-container"
              >
                <svg
                  aria-hidden="true"
                  fill="none"
                  height="16"
                  role="img"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="8"
                    cy="8"
                    fill="#E81123"
                    r="8"
                  />
                  <path
                    d="M10.9837 6.27639C11.3352 5.92491 11.3352 5.35507 10.9837 5.00359C10.6322 4.65212 10.0624 4.65212 9.7109 5.00359L7.99722 6.71728L6.28375 5.00381C5.93227 4.65234 5.36242 4.65234 5.01095 5.00381C4.65948 5.35528 4.65948 5.92513 5.01095 6.2766L6.72443 7.99007L4.9837 9.7308C4.63222 10.0823 4.63222 10.6521 4.9837 11.0036C5.33517 11.3551 5.90502 11.3551 6.25649 11.0036L7.99722 9.26287L9.73816 11.0038C10.0896 11.3553 10.6595 11.3553 11.011 11.0038C11.3624 10.6523 11.3624 10.0825 11.011 9.73101L9.27001 7.99007L10.9837 6.27639Z"
                    fill="var(--neutral-0)"
                  />
                </svg>
              </span>
            </span>
            <span
              aria-hidden="true"
              class="count"
              data-automation-id="count"
            >
               10
            </span>
            <span
              class="screen-reader-only"
            >
              10 Failed
            </span>
          </span>
        </span>
      </span>
    </h2>
    <mock-tabstopsrequirementswithinstances
      deps="[object Object]"
      headinglevel="3"
      results="[object Object],[object Object]"
    />
  </div>
</DocumentFragment>
`;
